day4/commands.txt
william@batman:~/Documents/Linux_CapstoneProject$ netstat -tulnp
(Not all processes could be identified, non-owned process info
 will not be shown, you would have to be root to see it all.)
Active Internet connections (only servers)
Proto Recv-Q Send-Q Local Address           Foreign Address         State       PID/Program name    
tcp        0      0 127.0.0.1:631           0.0.0.0:*               LISTEN      -                   
tcp        0      0 127.0.0.53:53           0.0.0.0:*               LISTEN      -                   
tcp6       0      0 ::1:631                 :::*                    LISTEN      -                   
udp        0      0 0.0.0.0:5353            0.0.0.0:*                           -                   
udp        0      0 127.0.0.53:53           0.0.0.0:*                           -                   
udp        0      0 0.0.0.0:57781           0.0.0.0:*                           -                   
udp6       0      0 :::5353                 :::*                                -                   
udp6       0      0 :::49651                :::* 

william@batman:~/Documents/Linux_CapstoneProject$ nano sensorSim.py

william@batman:~/Documents/Linux_CapstoneProject$ python3 sensorSim.py &
[1] 5972
william@batman:~/Documents/Linux_CapstoneProject$ 
sensor reading: 19 


william@batman:~/Documents/Linux_CapstoneProject$ ps -f | grep python3
william     5972    5577  0 19:12 pts/0    00:00:00 python3 sensorSim.py
william     5976    5577  0 19:12 pts/0    00:00:00 grep --color=auto python3
william@batman:~/Documents/Linux_CapstoneProject$ 
sensor reading: 13 


william@batman:~/Documents/Linux_CapstoneProject$ kill 5972
william@batman:~/Documents/Linux_CapstoneProject$ python3 sensorSim.py 

sensor reading: 7 


sensor reading: 19 


[1]   Terminated              python3 sensorSim.py

[2]+  Stopped                 python3 sensorSim.py
^Zwilliam@batman:~/Documents/Linux_CapstoneProject$ fg
python3 sensorSim.py


sensor reading: 18 


sensor reading: 0 

^Z
[2]+  Stopped                 python3 sensorSim.py
william@batman:~/Documents/Linux_CapstoneProject$ bg
[2]+ python3 sensorSim.py &
william@batman:~/Documents/Linux_CapstoneProject$ 
sensor reading: 0 


sensor reading: 18 


william@batman:~/Documents/Linux_CapstoneProject$ ps -f | python3

File "<stdin>", line 2
    william     5577    5559  0 17:07 pts/0    00:00:01 bash
                                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
william@batman:~/Documents/Linux_CapstoneProject$ 
sensor reading: 19 


william@batman:~/Documents/Linux_CapstoneProject$ ps -f
UID          PID    PPID  C STIME TTY          TIME CMD
william     5577    5559  0 17:07 pts/0    00:00:01 bash
william     5981    5577  0 19:15 pts/0    00:00:00 python3 sensorSim.py
william     5988    5577  0 19:18 pts/0    00:00:00 ps -f
william@batman:~/Documents/Linux_CapstoneProject$ kill 
sensor reading: 10 

5981





